[package]
name = "av"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
homepage = "https://github.com/rust-av/rust-av"
keywords = ["multimedia"]
license = "MIT"
edition = "2018"

[features]
nightly = []

[workspace]
members = [
    "bitstream",
    "codec",
    "data",
    "examples",
    "format",
]

[dependencies.av-data]
version = "0.2.1"
path = "data"

[dependencies.av-format]
version = "0.3.0"
path = "format"

[dependencies.av-bitstream]
version = "0.1.2"
path = "bitstream"

[dependencies.av-codec]
version = "0.2.0"
path = "codec"

[patch.crates-io]
av-codec = { path = "codec" }
av-data = { path = "data" }
av-format = { path = "format" }
