[package]
name = "av"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
homepage = "https://github.com/rust-av/rust-av"
keywords = ["multimedia"]
license = "MIT"
edition = "2021"

[features]
nightly = []

[workspace]
members = ["bitstream", "codec", "data", "format"]

[dependencies.av-bitstream]
version = "0.2.0"
path = "bitstream"

[dependencies.av-codec]
version = "0.3.0"
path = "codec"

[dependencies.av-data]
version = "0.4.0"
path = "data"

[dependencies.av-format]
version = "0.6.0"
path = "format"
