[package]
name = "av"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
homepage = "https://github.com/rust-av/rust-av"
keywords = ["multimedia"]
license = "MIT"
edition = "2021"

[features]
nightly = []

[workspace]
members = ["bitstream", "codec", "data", "format"]

[dependencies.av-bitstream]
version = "0.2.0"
path = "bitstream"

[dependencies.av-codec]
version = "0.3.0"
path = "codec"

[dependencies.av-data]
version = "0.4.4"
path = "data"

[dependencies.av-format]
version = "0.7.0"
path = "format"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
