[package]
name = "av-bitstream"
description = "Simple bit writer/reader"
version = "0.1.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
repository = "https://github.com/rust-av/rust-av"
edition = "2018"

[dependencies]
thiserror = "1.0"
num-traits = "0.2.8"

[dev-dependencies]
assert_matches = "1.3.0"
paste = "1.0.0"
