[package]
name = "av-bitstream"
description = "Simple bit writer/reader"
version = "0.2.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
repository = "https://github.com/rust-av/rust-av"
edition = "2021"
rust-version = "1.61.0"

[dependencies]
num-traits = "0.2.8"

[dev-dependencies]
assert_matches = "1.3.0"
criterion = { version = "0.8.0", default-features = false }
paste = "1.0.0"

[[bench]]
name = "bitread"
harness = false
