[package]
name = "av-data"
description = "Multimedia data structures"
version = "0.2.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
homepage = "https://github.com/rust-av/rust-av"
keywords = ["multimedia"]
readme = "README.md"
edition = "2018"

[dependencies]
byte-slice-cast = "1.0.0"
bytes = "0.5.2"
thiserror = "1.0"
num-rational = "0.3.0"
num-traits = "0.2.8"
num-derive = "0.3"
