[package]
name = "av-data"
description = "Multimedia data structures"
version = "0.4.3"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
homepage = "https://github.com/rust-av/rust-av"
keywords = ["multimedia"]
readme = "README.md"
edition = "2021"

[dependencies]
byte-slice-cast = "1.2.1"
bytes = "1.2.1"
thiserror = "1.0"
num-rational = "0.4.0"
num-traits = "0.2.8"
num-derive = "0.4"
