[package]
name = "av-examples"
description = "Multimedia examples"
version = "0.0.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
repository = "https://github.com/rust-av/rust-av"
edition = "2018"

[dev_dependencies]
av-codec = "0.2.0"
av-data = "0.2.1"
av-format = "0.2.1"
clap = "2.33.1"
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
libopus = { version = "0.1.0", git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
libvpx = { version = "0.1.0", git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
