[package]
name = "av-format"
description = "Multimedia format demuxing and muxing"
version = "0.2.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/rust-av/rust-av"

[dependencies]
log = "0.4.6"
err-derive = "0.1.6"
av-data = "0.2.0"
