[package]
name = "av-format"
description = "Multimedia format demuxing and muxing"
version = "0.7.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/rust-av/rust-av"

[dependencies]
log = "0.4.6"
thiserror = "2.0"
av-data = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3.3.0"
